# dataforge

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BENCHMARK_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  CURSOR_MASTER.md  DECISIONS.md  Dockerfile.env  FILE_STRUCTURE.md  MANIFEST.in  META_CONTEXT.md  Makefile  README.md  README_DATAFORGE.md  REWARD_DESIGN.md  SECURITY.md  analyze_trajectory.py  cliff.toml  debug_hf_scores.py  generate_datasets.py  openenv.yaml  progress.md  pyproject.toml  test_map.json  validate.py  verify_all_fields.py  verify_nuclear.py  verify_score_range.py  wrangler.dataforge-dev.toml  wrangler.toml
.cursor/rules/: dataforge.md
.dataforge/transactions/: txn-2026-05-05-4de8fd.jsonl
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  playground-monitor.yml  publish-dataforge-mcp.yml  publish-dataforge.yml  publish-testpypi.yml  release-smoke.yml  sync-to-hf.yml
data/sft_traj/: split_manifest_v2.json  split_manifest_v4.json
dataforge/: __init__.py  evaluation_contract.py  observability.py  repair_contract.py  schema_inference.py  table.py
dataforge-mcp/: README.md  pyproject.toml
dataforge-mcp/dataforge_mcp/: __init__.py  server.py  tools.py
dataforge-mcp/tests/: conftest.py  test_server_integration.py  test_tools.py
dataforge/agent/: __init__.py  scratchpad.py  tool_actions.py
dataforge/bench/: core.py  groq_client.py  methods.py  report.py  runner.py
dataforge/causal/: __init__.py  dag.py  pc.py  root_cause.py
dataforge/cli/: __init__.py  audit.py  bench.py  common.py  constraints.py  profile.py  release.py  repair.py  revert.py  watch.py
dataforge/datasets/: real_world.py  registry.py
dataforge/detectors/: __init__.py  base.py  decimal_shift.py  fd_violation.py  type_mismatch.py
dataforge/engine/: __init__.py  repair.py
dataforge/env/: __init__.py  environment.py  observation.py  openenv_core.py  reward.py  server.py
dataforge/fixtures/: hospital_schema.yaml
dataforge/http/: __init__.py  problem.py
dataforge/integrations/: dbt.py
dataforge/release/: __init__.py  doctor.py  gate.py  playground_check.py
dataforge/repairers/: __init__.py  base.py  decimal_shift.py  fd_violation.py  type_mismatch.py
dataforge/safety/: constitution.py
dataforge/stores/: __init__.py  base.py  cloud.py  csv.py  duckdb.py  patch_plan.py  registry.py  repair.py  revert.py  sql.py
dataforge/transactions/: __init__.py  files.py  log.py  revert.py  txn.py
dataforge/ui/: repair_diff.py
dataforge/verifier/: __init__.py  constraint_ir.py  smt.py
docs/: mkdocs.yml  pyproject.toml  requirements.txt
docs/docs/: architecture.md  changelog.md  detectors.md  index.md  playground.md  quickstart.md  reference.md  release.md  safety.md
eval/results/: agent_comparison.json  evidence_freeze_20260516.json  sft_paired_eval_synthetic_oracle_20260514.json  sft_release_contract_v2_20260515.json  sft_release_current_pipeline_20260514.json  sft_release_oracle_20260514.json  sft_release_v0_smoke.json  sft_release_v2_after_kaggle.json  sft_release_v2_after_kaggle_current_head.json  sft_release_v2_after_kaggle_summary.json  sota_comparison.json
logs/: sft_full_latest.txt
playground-model/: README.md  app.py  requirements.txt
playground/api/: README.md  SPACE_SETUP.md  app.py  pyproject.toml  requirements.txt  slowapi.env
playground/web/: DEPLOY.md  app.js  config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts  worker.js
requirements/in/: playground.in
scripts/: publish_model.py  test_mapped.py
scripts/bench/: generate_report.py  refresh_benchmark_table.py  refresh_benchmark_truth.py  run_agent_comparison.py  run_sota_comparison.py
scripts/ci/: backend_gate.py  benchmark_truth.py  openapi_contract.py  readme_truth.py
scripts/data/: build_oracle_sft_trajectories.py  collect_sft_trajectories.py  validate_sft_readiness.py
scripts/evidence/: freeze_current_state.py  sft_failure_postmortem.py
scripts/model/: __init__.py  publish_dataset_readme.py  summarize_eval_reports.py  verify_grpo_release.py  verify_sft_release.py
scripts/playground/: audit_live_playground.mjs  deploy_space.py  monitor_playground.py  render_web_config.py  stage_space.py  verify_frontend_deploy.py  verify_space_backend.py
scripts/preflight/: check_hf_auth.py  check_kaggle_auth.py
scripts/remote/: hf_full_eval_job.py
scripts/win/: setup.ps1
server/: requirements.txt
specs/: SPEC_TEMPLATE.md  SPEC_causal_root_cause.md  SPEC_color_system.md  SPEC_detectors.md  SPEC_grpo_training.md  SPEC_mcp_server.md  SPEC_model_space.md  SPEC_openenv_env.md  SPEC_playground.md  SPEC_sft_warmup.md  SPEC_transactions.md
specs/openapi/: openenv.openapi.json  playground.openapi.json
tests/integration/: test_bench_workflow.py  test_openenv_core_adapter.py  test_openenv_spec.py  test_playground_smoke.py
tests/property/: test_reward_bounds.py  test_transaction_audit_invariants.py
tests/unit/: test_bench_groq_client.py  test_bench_methods.py  test_bench_real_world.py  test_bench_report.py  test_bench_runner.py  test_causal_root_cause.py  test_cli_bench.py  test_cli_constraints.py  test_cli_profile.py  test_cli_repair.py  test_cli_watch.py  test_dataforge_grpo_reward.py  test_engine_repair.py  test_environment_edges.py  test_grpo_benchmark_refresh.py  test_grpo_configs.py  test_grpo_notebook_contract.py  test_grpo_release_verifier.py  test_kaggle_preflight.py  test_main.py  test_mcp_release_truth.py  test_model_space_contract.py  test_observability.py  test_observation.py  test_oracle_sft_trajectories.py  test_package_naming.py  test_playground_deploy_contract.py  test_playground_monitor.py  test_playground_stage_space.py  test_playground_web_contract.py  test_profile_hot_path_imports.py  test_public_api.py  test_publish_model.py  test_readme_truth.py  test_release_doctor.py  test_release_gate.py  test_release_workflows.py  test_repair_contract.py  test_reward.py  test_reward_design_parity.py  (+12 more)
training/: DATASET_README.md  MODEL_CARD_TEMPLATE.md  grpo_config.py
(+98 files in other folders)
